--- a/client/register.html
+++ b/client/register.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Register</title>
+
+  <!-- basic styles for the form -->
   <style>
     body {
       font-family: sans-serif;
@@ -23,33 +25,39 @@
 </head>
 <body>
   <h1>Register</h1>
+
+  <!-- The form submits data to the server and handles user registration. -->
   <form id="registerForm">
     <input type="text" name="username" placeholder="Username" required>
     <input type="password" name="password" placeholder="Password" required>
     <button type="submit">Register</button>
   </form>
+
+  <!-- This paragraph will display the result of the registration attempt. -->
   <p id="result"></p>
 
   <script>
-    const form = document.getElementById('registerForm');
-    form.addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const data = {
-        username: form.username.value.trim(),
+    const form = document.getElementById('registerForm'); // Get the form element by its ID
+    form.addEventListener('submit', async (e) => { // Add an event listener for the form submission
+      e.preventDefault(); // Prevent the default form submission behavior - this allows us to handle it
+      const data = { // Collect the form data
+        username: form.username.value.trim(), // Trim whitespace from the username to prevent duplicates
         password: form.password.value
       };
 
+      // Send the registration data to the server
       const res = await fetch('/register', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify(data)
       });
 
+      // Handle the server response
       const text = await res.text();
       document.getElementById('result').innerText = text;
 
       if (res.ok) {
-        form.reset();
+        form.reset(); // Reset the form fields if registration was successful
       }
     });
   </script>
