added welcome and logout button to store page, fixed alert for kicking to login to unconnected user, fixed moving to store page from succsessful login instead of reset form

--- a/client/login.html
+++ b/client/login.html
@@ -134,7 +134,11 @@
       resultEl.style.color = res.ok ? 'green' : 'darkred';
 
       if (res.ok) {
-        form.reset();
+        document.getElementById('result').style.color = 'green';
+  document.getElementById('result').innerText = 'Login successful!';
+  setTimeout(() => {
+    window.location.href = 'store.html';
+  }, 1000);
       }
     });
   </script>
