--- a/client/checkout.html
+++ b/client/checkout.html
@@ -11,6 +11,7 @@
       margin-bottom: 10px;
       border-radius: 5px;
     }
+
     .pay-btn {
       background-color: #28a745;
       color: white;
@@ -18,6 +19,10 @@
       border: none;
       border-radius: 4px;
       cursor: pointer;
+    }
+
+    .pay-btn:hover {
+      background-color: #218838;
     }
   </style>
 </head>
@@ -45,14 +50,26 @@
       const container = document.getElementById('itemsContainer');
       container.innerHTML = '';
 
-      items.forEach(item => {
+      // ✨ קיבוץ לפי product ID עם כמות
+      const grouped = {};
+      for (const item of items) {
+        if (!grouped[item.id]) {
+          grouped[item.id] = { ...item, quantity: 1 };
+        } else {
+          grouped[item.id].quantity++;
+        }
+      }
+
+      // ✨ יצירת תיבה אחת לכל מוצר ייחודי עם הצגת הכמות
+      Object.values(grouped).forEach(item => {
         const div = document.createElement('div');
         div.className = 'item';
         div.innerHTML = `
           <label>
             <input type="checkbox" name="item" value="${item.id}">
-            <strong>${item.name}</strong> - $${item.price.toFixed(2)}
-            <p>${item.description}</p>
+            <strong>${item.name}</strong> - $${item.price.toFixed(2)}<br>
+            ${item.description}<br>
+            <strong>Quantity:</strong> ${item.quantity}
           </label>
         `;
         container.appendChild(div);
@@ -69,7 +86,7 @@
         return;
       }
 
-      // שומרים את המוצרים המקומית בזיכרון הדפדפן (sessionStorage)
+      // שמירה זמנית של הפריטים שנבחרו לתשלום
       sessionStorage.setItem('checkoutItems', JSON.stringify(selected));
       window.location.href = 'pay.html';
     });
