--- a/client/thankyou.html
+++ b/client/thankyou.html
@@ -1,14 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Thank You</title>
+  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      margin: 0;
+      padding: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
+
+    .thankyou-container {
+      background-color: white;
+      padding: 40px;
+      border-radius: 8px;
+      box-shadow: 0 2px 12px rgba(0, 0, 0, 0.1);
+      max-width: 500px;
+      text-align: center;
+    }
+
+    h1 {
+      color: #28a745;
+      font-size: 28px;
+      margin-bottom: 20px;
+    }
+
+    p {
+      color: #555;
+      font-size: 18px;
+      margin-bottom: 30px;
+    }
+
+    .btn-home {
+      background-color: #007bff;
+      color: white;
+      padding: 10px 20px;
+      text-decoration: none;
+      border: none;
+      border-radius: 5px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    .btn-home:hover {
+      background-color: #0056b3;
+    }
+  </style>
 </head>
 <body>
-  <div class="form-container">
-    <h1>Thank you for your purchase!</h1>
-    <p>Your fake payment was successful 😉</p>
-    <button onclick="window.location.href = 'store.html'">Back to Store</button>
+  <div class="thankyou-container">
+    <h1>✅ Thank you for your purchase!</h1>
+    <p>Your fake payment was successful. We hope you enjoy your jerseys!</p>
+    <button class="btn-home" onclick="goHome()">🏠 Back to Store</button>
   </div>
+
+  <script>
+    function goHome() {
+      window.location.href = "store.html";
+    }
+  </script>
 </body>
 </html>
