added navigation bar and alert to myitems page that you must login

--- a/client/cart.html
+++ b/client/cart.html
@@ -53,6 +53,8 @@
 
   </div>
 
+  <script src="navbar.js"></script>
+
   <script>
     async function loadCart() {
       const res = await fetch('/cart');
