--- a/client/checkout.html
+++ b/client/checkout.html
@@ -48,6 +48,9 @@
     
   </div>
 
+  <script src="navbar.js"></script>
+
+
   <script>
     let grouped = {}; // נשמר כדי שנוכל לגשת אליו גם בהמשך
 
