--- a/client/register.html
+++ b/client/register.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Register Form</title>
   <style>
@@ -105,6 +106,9 @@
       <a href="login.html">Login here</a>
     </p>
   </div>
+
+  <script src="navbar.js"></script>
+
 
   <script>
     const form = document.getElementById('registerForm');
