--- a/client/store.html
+++ b/client/store.html
@@ -50,6 +50,9 @@
     <div id="products"></div>
   </div>
 
+  <script src="navbar.js"></script>
+
+
   <script>
     async function loadProducts() {
       const res = await fetch('/products');
