--- a/client/thankyou.html
+++ b/client/thankyou.html
@@ -60,6 +60,8 @@
     <button class="btn-home" onclick="goHome()">🏠 Back to Store</button>
   </div>
 
+  <script src="navbar.js"></script>
+
   <script>
     function goHome() {
       window.location.href = "store.html";
