--- a/client/login.html
+++ b/client/login.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login Form</title>
   <style>
@@ -108,6 +109,9 @@
       <p id="result"></p>
     </form>
   </div>
+
+  <script src="navbar.js"></script>
+
 
   <script>
     const form = document.getElementById('loginForm');
