--- a/client/myitems.html
+++ b/client/myitems.html
@@ -5,25 +5,34 @@
   <link rel="stylesheet" href="style.css">
   <title>My Items</title>
   <style>
-    body {
+    body.with-nav {
+      padding-top: 60px;
       font-family: Arial, sans-serif;
       background-color: #f4f4f4;
       margin: 0;
-      padding: 0;
+    }
+
+    .form-container {
+      background-color: white;
+      padding: 40px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      width: 90%;
+      max-width: 1000px;
+      margin: auto;
     }
 
     h1 {
-      background-color: #222;
-      color: #fff;
-      margin: 0;
-      padding: 20px;
       text-align: center;
+      margin-bottom: 30px;
+      color: #333;
     }
 
     #items-container {
       display: flex;
       flex-wrap: wrap;
-      justify-content: center;
+      justify-content: flex-start;
+      gap: 15px;
       padding: 20px;
     }
 
@@ -31,8 +40,7 @@
       background-color: #fff;
       border: 1px solid #ddd;
       border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      margin: 10px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       padding: 15px;
       width: 250px;
     }
@@ -45,12 +53,12 @@
       margin: 5px 0;
     }
 
-    button {
+    .back-btn {
       display: block;
-      margin: 20px auto 40px;
+      margin: 30px auto 0;
       padding: 10px 20px;
       font-size: 16px;
-      background-color: #222;
+      background-color: #007bff;
       color: white;
       border: none;
       border-radius: 4px;
@@ -58,38 +66,38 @@
       transition: background-color 0.3s ease;
     }
 
-    button:hover {
-      background-color: #444;
+    .back-btn:hover {
+      background-color: #0056b3;
     }
   </style>
 </head>
-<body>
-  <h1>Items You Purchased</h1>
-  <div id="items-container"></div>
-  <button onclick="window.location.href='store.html'">← Back to Store</button>
+<body class="with-nav">
+  <div class="form-container">
+    <h1>Items You Purchased</h1>
+    <div id="items-container"></div>
+    <button class="back-btn" onclick="window.location.href='store.html'">← Back to Store</button>
+  </div>
 
   <script src="navbar.js"></script>
-
 
   <script>
     window.onload = async () => {
       try {
         const res = await fetch('/my-items');
 
-if (res.status === 401) {
-  alert('עליך להתחבר תחילה'); // הודעה זהה ל-checkout
-  window.location.href = 'login.html';
-  return;
-}
+        if (res.status === 401) {
+          alert('עליך להתחבר תחילה');
+          window.location.href = 'login.html';
+          return;
+        }
 
-if (!res.ok) throw new Error('Failed to load your purchases');
-
+        if (!res.ok) throw new Error('Failed to load your purchases');
 
         const items = await res.json();
         const container = document.getElementById('items-container');
 
         if (items.length === 0) {
-          container.innerHTML = '<p>You haven’t purchased anything yet.</p>';
+          container.innerHTML = '<p style="text-align: center;">You haven’t purchased anything yet.</p>';
           return;
         }
 
