added don't have account button on login page

--- a/client/login.html
+++ b/client/login.html
@@ -105,6 +105,10 @@
       </div>
 
       <button type="submit" class="login-button">Login</button>
+      <div class="switch-link">
+  <span>Don't have an account? <a href="register.html">Register here</a></span>
+</div>
+
 
       <p id="result"></p>
     </form>
